Fixed bug where chat bubbles would remain white in dark mode

--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,7 @@
 html.__fb-dark-mode .hop1g133 .hybvsw6c, html.__fb-dark-mode .nred35xi {
   --surface-background: #18191A !important;
   --messenger-card-background: #18191A !important;
+  --wash: #3E4042 !important;
 }
 
 html.__fb-dark-mode .oo9gr5id {
